--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/stubhub
-spring.datasource.username=root
-spring.datasource.password=Lebronjames23!
-#spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_d6f38d962f50f50
-#spring.datasource.username=b1c974ac45df4a
-#spring.datasource.password=428a63c2
+#spring.datasource.url=jdbc:mysql://localhost:3306/stubhub
+#spring.datasource.username=root
+#spring.datasource.password=Lebronjames23!
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_d6f38d962f50f50
+spring.datasource.username=b1c974ac45df4a
+spring.datasource.password=428a63c2
 spring.datasource.tomcat.max-active=5
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.tomcat.max-idle=5
